--- a/index.html
+++ b/index.html
@@ -217,6 +217,13 @@ body{
   padding: 30px !important;
   min-height: 520px;
 }
+#home-section .slider-text{
+  justify-content: flex-start !important;
+  text-align: left !important;
+}
+#home-section .text{
+  text-align: left !important;
+}
 
 </style>
 
@@ -252,7 +259,8 @@ body{
 	       <div class="slider-item ">
 	      	<div class="overlay"></div>
 	         <div class="container">
-	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+	         <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-start" data-scrollax-parent="true">
+
 	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url();">
 	          	 <div class="overlay"></div>
 	          	</div>
