--- a/index.html
+++ b/index.html
@@ -391,8 +391,11 @@ body{
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>With a strong foundation in Information Management from undergraduate and graduate studies, I bring a unique blend of technical expertise and strategic insight to the world of data and systems. My academic journey from earning a Bachelor's in Information Management to a Master's in Management Information Systems has equipped me with comprehensive knowledge of data analytics, ERP Systems, ERP Configuration and cybersecurity.
-									      As a SAP (TS410 Business Process Integration Certified professional), I excel in leveraging advanced tools like Python, Power BI, Tableau, and SAP Cloud Analytics to streamline business processes and deliver impactful insights. From AI-driven research influencing military strategies to optimizing enterprise operations, I thrive on harnessing information to drive innovation, efficiency, and value across diverse domains.</p>
+								<p>With a Master’s in Management Information Systems and hands-on experience in SAP S/4HANA Public Cloud implementation, I specialize in transforming complex business processes into data-driven, scalable solutions. As an SAP Certified professional in Business Data Cloud (BDC), SAP Analytics Cloud (SAC), and S/4HANA Business Process Integration (TS410), I bridge functional expertise with technical execution.
+
+My work spans enterprise analytics, procurement and finance processes, SAC Dashboard Architecture, and cross-module SAP integration. I focus on building intelligent reporting ecosystems that improve operational visibility, cost control, and strategic decision-making.
+
+From AI research in defense systems to delivering real-world SAP analytics solutions in manufacturing environments, I operate at the intersection of business strategy, data architecture, and enterprise technology  driven by one mission: turning information into measurable impact.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Data Science &amp; Analytics</span></li>
 									<li class="d-flex"><span>Domain:</span> <span> SAP ERP Systems, SAP Business Process Integration,Business Intelligence, Data Analytics, Enterprise Systems, Supply Chain Management, Information Security, Military Technology</span></li>
