--- a/index.html
+++ b/index.html
@@ -340,10 +340,10 @@ body{
 									<!-- Details next to profile image -->
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
-										<p><span class="title-s">Name: </span> <span>Anand Bhagat </span></p>
+										<p><span class="title-s">Name: </span> <span>Anand Kumar Bhagat </span></p>
 										<p><span class="title-s">Job Role: </span> <span>SAP Business Analyst </span></p>
 										<p><span class="title-s">Experience: </span> <span>3+ Years </span></p>
-										<p><span class="title-s">Address: </span> <span>Mississippi, USA</span></p>
+										<p><span class="title-s">Address: </span> <span>Mississippi,USA</span></p>
 									  </div>
 									</div>
 								  </div>
