--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ From AI research in defense systems to delivering real-world SAP analytics solut
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Aspiring Data Analyst with an MS in Management Information Systems, combining advanced academic knowledge with hands-on experience in AI research and system analysis. Skilled in leveraging data analytics and ERP systems to drive efficiency and provide actionable insights.</p>
+            <p>SAP Certified Enterprise Analytics Professional with a Master’s in Management Information Systems, specializing in SAP S/4HANA Public Cloud, SAP Business Data Cloud (BDC), and SAP Analytics Cloud (SAC). Experienced in enterprise SAP environments including ServiceNow ticket management and SAP Concur integration, delivering data-driven solutions that improve operational efficiency and business visibility.</p>
           </div>
         </div>
 
