--- a/index.html
+++ b/index.html
@@ -449,13 +449,14 @@ From AI research in defense systems to delivering real-world SAP analytics solut
   <div class="col-lg-4 col-md-6 col-12 mb-4">
     <div class="resume-wrap ftco-animate">
       <span class="date">June 2025–Present</span>
-      <h2>SAP IT Intern </h2>
+      <h2>SAP IT Intern → SAP Analytics & Integration Analyst</h2>
       <span class="position">Amplify Cell Technologies, Byhalia – MS</span>
       <p class="mt-4">Amplify Cell Technologies is building the largest U.S. commercial battery cell manufacturing plant for heavy‑ and medium‑duty vehicles.
         <ul>
-          <li>Customized 6+ SAC dashboards for OPEX, CAPEX, and cost center planning, improving planning cycle accuracy by 25%.</li>
-          <li>Supported SAP S/4HANA procurement configuration by analyzing vendor proposals and onboarding flows.</li>
-          <li>Documented cross‑module workflows, enhancing SAP training materials and integration clarity.</li>
+          <li>Designed and deployed 6+ SAP Analytics Cloud (SAC) dashboards for OPEX, CAPEX, and cost center planning, improving planning accuracy by 25% across business units.</li>
+          <li>Supported SAP S/4HANA Public Cloud procurement configuration, vendor onboarding processes, and cross-module integration across Finance and Supply Chain.</li>
+          <li>Led SAP incident and change management activities via ServiceNow, ensuring structured ticket resolution and alignment between business stakeholders and offshore SAP teams.</li>
+			<li>Administered SAP Concur processes including employee onboarding, expense policy configuration, and financial reporting alignment in coordination with Finance.</li>
         </ul>
       </p>
     </div>
