--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ From AI research in defense systems to delivering real-world SAP analytics solut
     					<span class="date">2024-2025</span>
     					<h2>Master of Science in Management Information Systems</h2>
     					<span class="position">Lamar University</span>
-    					<p class="mt-4">GPA: 4.0</p>
+    					<p class="mt-4">GPA: 4.0 2024-2025</p>
 						<p class="mt-4"> SAP Certified Business Process Integration (TS410) Summer: 2024</p>
     				</div>
     			</div>
