--- a/index.html
+++ b/index.html
@@ -516,7 +516,8 @@ From AI research in defense systems to delivering real-world SAP analytics solut
     					<h2>Master of Science in Management Information Systems</h2>
     					<span class="position">Lamar University</span>
     					<p class="mt-4">GPA: 4.0 /p>
-						<p class="mt-4"> SAP Certified Business Process Integration (TS410) Summer: 2024</p>
+						<p class="mt-4"> SAP Certified Business Process Integration (TS410) Summer: 2024</p> 
+						<p class="mt-4">Member: Beta Gamma Sigma Feb 2025/p>
     				</div>
     			</div>
 
