--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ body{
 										<p><span class="title-s">Name: </span> <span>Anand Kumar Bhagat </span></p>
 										<p><span class="title-s">Job Role: </span> <span>SAP Business Analyst </span></p>
 										<p><span class="title-s">Experience: </span> <span>3+ Years </span></p>
-										<p><span class="title-s">Address: </span> <span>Mississippi,USA</span></p>
+										<p><span class="title-s">Address: </span> <span>Mississippi, USA</span></p>
 									  </div>
 									</div>
 								  </div>
@@ -517,7 +517,7 @@ From AI research in defense systems to delivering real-world SAP analytics solut
     					<span class="position">Lamar University</span>
     					<p class="mt-4">GPA: 4.0 </p>
 						<p class="mt-4"> SAP Certified Business Process Integration (TS410) Summer: 2024</p> 
-						<p class="mt-4">Member: Beta Gamma Sigma Feb 2025/p>
+						<p class="mt-4">Member: Beta Gamma Sigma, Feb 2025</p>
     				</div>
     			</div>
 
