--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ From AI research in defense systems to delivering real-world SAP analytics solut
 
   <div class="col-md-4">
     <div class="resume-wrap ftco-animate">
-      <span class="date">2024–Present</span>
+      <span class="date"> January 2024 – May 2025</span>
       <h2>Graduate Research Assistant</h2>
       <span class="position">Lamar University</span>
       <p class="mt-4">Lamar University is a public institution known for research, innovation, and hands-on learning.
